@@ -4,6 +4,9 @@ git-annex (5.20131222) UNRELEASED; urgency=medium
     (tasty was stuck in incoming.)
   * Fix typo in test suite.
   * Fix bug in Linux standalone build's shimming that broke git-annex-shell.
+  * Include git-receive-pack, git-upload-pack, and git wrappers in the Linux
+    standalone build, and OSX app, so they will be available when it's
+    added to PATH.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 24 Dec 2013 13:54:32 -0400
 
